<resources>
    <string name="app_name">Gest\'halte</string>
    <string name="name">Nom:</string>
    <string name="firstName">Prénom:</string>
    <string name="DateNaissance">Date de naissance:</string>
    <string name="age">Âge</string>
    <string name="phone">Téléphone:</string>
    <string name="address">Adresse:</string>
    <string name="city">Ville:</string>
    <string name="province">Province:</string>
    <string name="zipCode">Code postal:</string>
    <string name="allergy">Allergie(s):</string>
    <string name="parent1">Parent 1:</string>
    <string name="parent2">Parent 2:</string>
    <string name="parent3">Parent 3:</string>
    <string name="authorizedPersons">Personnes autorisées:</string>
    <string name="roomManagement_Construction">Gestion des locaux - à venir</string>
    <string name="schedulePlanning_Construction">Gestion des horaires - à venir</string>
    <string name="presenceManagement_Construction">Gestion des présences - à venir</string>
    <string name="search">Chercher</string>
    <string name="kidRegister">Registre d\'enfants</string>
    <string name="addKid">Ajouter un enfant</string>
    <string name="modifyKid">Modifer un enfant</string>
    <string name="saving_Construction">Enregistrement - à venir</string>
    <string name="btnAdd">Ajouter</string>
    <string name="roomManagement">Gestion des locaux</string>
    <string name="presenceManagement">Gestions des présences</string>
    <string name="scheduleManagement">Gestions des horaires</string>
    <string name="btnEnregistrer">Enregistrer</string>
    <string name="presence">Present</string>
    <string name="modifier">Modifier</string>
    <string name="add">Ajouter</string>
    <string name="childRegister">Registre des enfants</string>
    <string name="backHome">Retour à l\'accueil</string>
    <string name="nom_de_l_enfant">Nom de l\'enfant</string>
</resources>